@@ -1,8 +1,7 @@
 package com.example.project5.service;
 
 import java.util.List;
-
-
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -48,7 +47,7 @@ public class RecruitPostReplyService {
         
         return list.stream()
                 .map(RecruitPostReplyReadDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
     
     @Transactional(readOnly = true)
